[package]
name = "kair"
version = "0.1.0"
authors = ["Jorge Carrasco Muriel <carrascomurielj@gmail.com>"]
edition = "2018"
description = "COnstraint Based Reconstruction and Analysis (COBRA) in Rust"
license = "GPL-2.0-or-later"
repository = "https://github.com/carrascomj/kair"
categories = ["simulation", "science", "mathematics"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_sbml = { version="0.3.0", default_features=false }
lp-modeler = "0.4.2"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "./src/docs-header.html" ]
