[package]
name = "kair"
version = "0.3.1"
authors = ["Jorge Carrasco Muriel <carrascomurielj@gmail.com>"]
edition = "2018"
description = "COnstraint Based Reconstruction and Analysis (COBRA) in Rust"
license = "GPL-2.0-or-later"
repository = "https://github.com/carrascomj/kair"
categories = ["simulation", "science", "mathematics"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_sbml = { version="0.5.1", default_features=false }
good_lp = { version="1.0.0", default-features=false }
rayon = "1.5.0"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "./src/docs-header.html" ]

[dev-dependencies]
criterion = "0.3.3"
good_lp = "1.0.0"

[[bench]]
name = "formulate_from_sbml"
harness = false
